Bug fix: unsupported message does not be displayed on IE

--- a/src/client/css/bootstrap-custom.scss
+++ b/src/client/css/bootstrap-custom.scss
@@ -6,10 +6,6 @@
 @import "./table";
 @import "./text";
 
-#unsupported-message {
-  color: red !important;
-}
-
 .borderable {
   padding: 0.25rem !important;
 }
